Hide secrets properly
Docker hub shows env var values in plaintext. So instead we're going to use
a .env file that is pulled into the container.